fix: init frontend and new API routes
