# backend/start/routes.ts
@@ -1,6 +1,7 @@
 import router from '@adonisjs/core/services/router'
 
 const SchedulesController = () => import('#controllers/schedules_controller')
+const TheatersController = () => import('#controllers/theaters_controller')
 
 router.get('/', () => {
   return { name: 'minuit', status: 'ok' }
@@ -9,6 +10,7 @@ router.get('/', () => {
 router
   .group(() => {
     router.get('theater', [SchedulesController, 'index']).as('theater.index')
+    router.get('theaters', [TheatersController, 'index']).as('theaters.index')
   })
   .prefix('/api/v1')
   .as('api')
